# src/main/resources/openapi/paths/links-shortCode.yaml
@@ -1,11 +1,5 @@
 parameters:
-  - in: path
-    name: shortCode
-    description: Short Code to be fetched
-    required: true
-    schema:
-      type: string
-      minLength: 3
+  - $ref: "../openapi.yaml#/components/parameters/ShortCodePathParam"
 get:
   operationId: getLink
   summary: Get details of a Short Link
